# LearnOpenCV

./: .gitignore  CMakeLists.txt  README.md  launch.vs.json
camera_to_video/: CMakeLists.txt  camera_to_video.cpp
classification/: CMakeLists.txt  classification.cpp
cmake_modules/: FindOpenCV.cmake  base.cmake  utils.cmake
common/: utilities.h
erase_specify_color/: CMakeLists.txt  erase_specify_color.cpp
example/camera_to_video/: camera_to_video.cpp
example/classification/: classification.cpp
example/convolution/: CMakeLists.txt  convolution.cpp
example/erase_specify_color/: erase_specify_color.cpp
example/filter/: CMakeLists.txt  fft.cc
example/image_container/: README.md
example/knn/: CMakeLists.txt  knn.cpp
example/live_ocr/: live_ocr copy.cpp.bak  live_ocr.cpp
example/motion_correction/: CMakeLists.txt  README.md  motion_correction.cpp
example/split_color/: CMakeLists.txt
example/target_interception/: CMakeLists.txt  target_interception.cpp
example/user_interaction/: user_interaction.cpp
example/video_to_frame/: CMakeLists.txt  video_to_frame.cpp
histogram/: CMakeLists.txt  histogram.cpp
image_container/: CMakeLists.txt  README.md  image_container.cpp
images_stitching/: CMakeLists.txt  README.md  images_stitching.cpp
knn/: knn.cpp
live_ocr/: CMakeLists.txt  live_ocr.cpp
motion_correction/: motion_correction.cpp
split_color/: split_color.cpp
utils/: CMakeLists.txt  utils.cpp
